# Indie_studio

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.org  filestoread  score.txt
Doc/: Doxyfile
__tests__/__compilation__/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  clean.sh  cmake_install.cmake  compilation.sh
assets/models/: BotLeft.mtl  Ground.mtl  TopLeft.mtl
includes/Common/: Component.hpp  Core.hh  GUI.hpp  Map.hpp  Scene.hpp  Sprite.hpp  Tile.hpp  Timer.hpp  common.hpp  helper.hpp
includes/Core/: Core.hpp
includes/Exception/: errors_messages.hpp  exception.hpp
includes/Game/: AAI.hpp  AiMedium.hpp  AiSimple.hpp  Component.hpp  Game.hpp  Load.hpp  Map.hpp  ModelsId.hpp  Player.hpp  ResourceHandler.hpp  Scene.hpp  Score.hpp  Settings.hpp  Tile.hpp  keyMap.hpp
includes/Graphical/: Component.hpp  Gfx.hpp  GfxContainers.hpp  IrrlichtEventsCorrespondence.hpp  Model.hpp  irrEventsOverlay.hpp
includes/Interfaces/: Color.cpp  Color.hpp  Event.hpp  GameState.hpp  IAI.hpp  IComponent.hpp  IGUI.h  IGUI.hpp  IGame.hpp  IGameState.h  IGameState.hpp  IGfx.h  IGfx.hpp  IMap.hpp  IModel.hpp  IScene.hpp  ISprite.hpp  IStat.h  IStat.hpp  ITile.hpp  Sound.hpp
includes/Sound/: SoundManager.hpp
install/: install.sh
resources/Explosions/1/: FrameDatas.txt  Square_Explosion.md3
resources/Explosions/2/: FrameDatas.txt  Pikes_1.md3  Pikes_2.md3  Pikes_3.md3  Pikes_4.md3  Pikes_Center.md3
resources/Explosions/3/: FrameDatas.txt  Portal.md3  Tentacle_1.md3  Tentacle_2.md3  Tentacle_3.md3  Tentacle_4.md3  Tentacle_5.md3  Tentacle_6.md3
resources/Map/: Box.md3  bot_left.mtl  bot_right.mtl  falling_stone.md3  ground.mtl  pillars.mtl  top_left.mtl  top_right.mtl
resources/Menu_final/INGAME/: DATAS.txt
resources/Menu_final/ROOM/: DATAS.txt.txt
resources/Menu_final/SETTINGS/: DATAS.txt.txt
resources/Models/SkeletonMage/: SkeletonMage.b3d  SkeletonMageFS.txt
resources/PowerUps/: Grimoire.mtl  Statuette.mtl
resources/Sounds/SFX/: Datas.txt  Explosion_1.flac  Explosion_2.flac  Explosion_3.flac  Pikes.flac  Rock.flac  Skeleton_Die.flac  Skeleton_Spawn.flac  lol.flac  pageturn.flac
resources/models/: BotRight.mtl  Pillars.mtl  TopRight.mtl
rida_ia/: AAI.cpp
src/: main.cpp
src/Common/: Color.cpp  Component.cpp  GameState.cpp  Map.cpp  Models.cpp  Scene.cpp  Tile.cpp  core.cpp
src/Core/: Core.cpp  Loading.cpp  Notify.cpp  Process.cpp  core.cpp
src/Game/: AAI.cpp  AiMedium.cpp  AiSimple.cpp  Animations.cpp  Bonus.cpp  Events.cpp  Explosions.cpp  Frames.cpp  Game.cpp  Load.cpp  Map.cpp  MapFactory.cpp  Models.cpp  Player.cpp  Process.cpp  Score.cpp  Textures.cpp  Tile.cpp  Tiles_Handling.cpp  animations.cpp  fallingStones.cpp  keyMap.cpp
src/Graphical/: Gfx.cpp
src/Graphical/GUI/: GUI.cpp  HighScore.cpp  InGame.cpp  MainMenu.cpp  Pause.cpp  Room.cpp  Settings.cpp
src/Graphical/Gfx/: Camera.cpp  Component.cpp  Event.cpp  Events.cpp  Font.cpp  GUI.cpp  Gfx.cpp  Map.cpp  Models.cpp  Scene.cpp  Sound.cpp  SplashScreen.cpp  Sprites.cpp  Tools.cpp  irrEventOverlay.cpp
src/Graphical/Model/: Models.cpp
src/Graphical/Sprite/: Sprite.cpp
src/Sound/: SoundManager.cpp
src/State/: GameState.cpp
www/: index.html
www/assets/css/: main.css
www/assets/sass/: main.scss
www/assets/sass/base/: _page.scss
